<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_change_pass"
            android:icon="@drawable/ic_mode_edit_black_24px"
            android:title="@string/enter_new_password" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24px"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/share_with_friends" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_star_rate_black_18px"
                android:title="@string/rate_app" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback_black_24px"
                android:title="@string/feedback" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_log_out_new_black_24px"
                android:title="@string/string_log_out" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
